<resources>
    <string name="app_name">Lab6</string>
    <string name="emailAddress">Enter your email address</string>
    <string name="typeEmail">Type email here</string>
    <string name="password">Type your password</string>
    <string name="login">LOGIN</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="take_picture">Click the button above to take a picture</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="type_here_hint">Type here</string>
    <string name="message_here">Message Here</string>
    <string name="id">ID=</string>
    <string name="hide">Hide</string>
    <string name="is_a_send_message">is a Send Message</string>
    <string name="go_to_toolbar_page">Go to Toolbar page</string>
    <string name="chat_room">Chat room</string>
    <string name="weather">Weather</string>
    <string name="go_back_to_login">go back to login</string>
    <string name="open">Drawer open</string>
    <string name="close">Drawer close</string>

</resources>